# ESOModManager

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
esomm/: CMakeLists.txt  esomm.cpp  esomm.h  esomm.rc  esomm.ui  main.cpp  resources.qrc
esomm/include/: CMakeLists.txt  ModType.h  esomm.h  esomm_style.h  http_client.h  logger.h  manager.h  pathing.h  startingwindow.h
esomm/resources/: esomm.qss
esomm/src/: CMakeLists.txt  esomm.cpp  esomm_style.cpp  http_client.cpp  logger.cpp  main.cpp  manager.cpp  pathing.cpp  startingwindow.cpp
esomm/ui/: CMakeLists.txt  esomm.ui
